test/sema/missing-generic-args.delta.output
missing-generic-args.delta:4:1: error: too few generic arguments to 'List', expected 1
List f() {
^
missing-generic-args.delta:5:5: error: mismatching return type 'List<int>', expected 'List'
    return List<int>();
    ^
missing-generic-args.delta:10:7: error: too few generic arguments to 'List', expected 1
    A(List l);
      ^
missing-generic-args.delta:4:6: warning: unused declaration 'f'
List f() {
     ^
