test/sema/missing-generic-args.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:1: error: too few generic arguments to 'List', expected 1
List f() {
    return List<int>();
}

enum E {
    // CHECK: [[@LINE+1]]:7: error: too few generic arguments to 'List', expected 1
    A(List l);
}
